Updated jupyter notbeook to remove sensitive operations

--- a/test.ipynb
+++ b/test.ipynb
@@ -129,24 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "OpenAIEmbeddings(client=<openai.resources.embeddings.Embeddings object at 0x111a36dd0>, async_client=<openai.resources.embeddings.AsyncEmbeddings object at 0x1119d2e90>, model='text-embedding-ada-002', deployment='text-embedding-ada-002', openai_api_version='', openai_api_base=None, openai_api_type='', openai_proxy='', embedding_ctx_length=8191, openai_api_key='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', openai_organization=None, allowed_special=set(), disallowed_special='all', chunk_size=1000, max_retries=2, request_timeout=None, headers=None, tiktoken_enabled=True, tiktoken_model_name=None, show_progress_bar=False, model_kwargs={}, skip_empty=False, default_headers=None, default_query=None, retry_min_seconds=4, retry_max_seconds=20, http_client=None)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Embedding technique with OpenAI\n",
-    "embeddings = OpenAIEmbeddings(api_key=os.environ['OPENAI_API_KEY'])\n",
-    "embeddings"
+    "embeddings = OpenAIEmbeddings(api_key=os.environ['OPENAI_API_KEY'])"
    ]
   },
   {
